--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Stefanos Chrs <stefanoschrs@hotmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bunyan": "^1.8.5"
+    "bunyan": "^1.8.5",
+    "file-stream-rotator": "^0.0.7"
   }
 }
