--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "morgan": "^1.8.0"
   },
   "devDependencies": {
-    "express": "^4.14.1"
+    "babel-eslint": "^7.1.1",
+    "babel-plugin-transform-do-expressions": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "express": "^4.14.1",
+    "standard": "^8.6.0"
   },
   "main": "./lib/index.js",
   "scripts": {
     "test": "standard && node lib/index.spec.js"
+  },
+  "standard": {
+    "parser": "babel-eslint"
   },
   "repository": {
     "type": "git",
@@ -23,7 +30,8 @@
     "morgan",
     "logging",
     "nodejs",
-    "express"
+    "express",
+    "standardjs"
   ],
   "author": "Stefanos Chrs <stefanoschrs@hotmail.com>",
   "license": "MIT"
